# ETL-pipeline

./: .env  .env.example  .gitignore  README  README.md  config.py  fund_operations.duckdb  logger_config.py  main.py  pyproject.toml  requirements.txt  setup.bat  setup.sh
config/: settings.py
data/0_raw data/: Accounting_Cash_Statement-1.CSV  All_Corporate_Actions-1.CSV  All_Positions20260219-1.csv  COMBINED_HARVEST_CONSOLIDATED_PORTFOLIO_HOLDINGS_20260218_DETAIL.csv  Cash_Forecast_Transactions.CSV  Custody_Positions-1.csv  Daily_Model_Holdings-1.csv  Daily_Net_Asset_Values-1.CSV  Distribution_Liability-1.csv  FPTRAD_report.csv  HARVEST_20260219_2130.csv.ndm01  Harvest_INKIND.20260218.TXT  Harvest_NAV_ALL.20260218-1.CSV  Harvest_Preburst_INKIND_ALL.20260219-1.TXT  LoanTransactions-1.csv  Loan_Balances.csv  Model_Loan_Balances_20260219-1.csv  Opening_Cash_Balances.csv  PBDailyCombined_Consolidated_2068_2026-02-18-1.xls  PLF_Positions20260219.csv  Pending_FX_Accounting.csv  SingleStockBBU-1.xlsx  (+3 more)
docs/: Conventions.md
etl_pipeline.egg-info/: SOURCES.txt
examples/: run_pipeline.py  test_bskt.py
notebooks/: PLF_Positions20260302.csv  PLF_Positions20260324.csv  api_pulls.ipynb  bloomberg_test.ipynb  bloombergtest.ipynb  exploration.ipynb  history_all_fund_navs.csv  mended  mft_login.ipynb  mft_test.ipynb  other.ipynb  random.ipynb  testing_plf_logic.ipynb
src/: clean.py  cleaner.py  config.py  extract.py  extractor.py  ingestor.py  load_silver.sql  parsers.py  requirements.txt  utils.py  validator.py
tests/: test_clean.py  test_inav_bskt_parser.py
(+26 files in other folders)
